--- a/L2/homework/templates/pass.html
+++ b/L2/homework/templates/pass.html
@@ -20,7 +20,7 @@
     <p><input type="submit" value="Login"></p>
 </form>   
 
-{% elif result %}
+{% elif result_end %}
 
 <p> "Login succesful!"</p>
 
