lan nay thi dung cu phap chua

--- a/L1/home work/L2/templates/menu.html
+++ b/L1/home work/L2/templates/menu.html
@@ -20,8 +20,8 @@
 
     {% for data in menues %}
     
-    <hl> {{ data.name }} - {{data.price}}k
-        <br> </hl>
+    <hl> {{ data.name }} - {{data.price}}k <a href = 'edit_food'> Edit </a>
+        <br> </hl> 
 
     {% endfor %}
 
